--- a/Fluid-Layout.css
+++ b/Fluid-Layout.css
@@ -6,6 +6,7 @@ body{
      margin: 0px;
      font-family: Verdana, Georgia, serif;
      font-size: 14px;
+     box-sizing: border-box;
 }
 
 #header{
