Headings and Paras

--- a/Fluid-Layout.css
+++ b/Fluid-Layout.css
@@ -152,7 +152,7 @@ FOOTER SECTION
 }
 
 /* **************************
- HEADINGS STYLES SECTION
+ HEADINGS AND PARAS
  ************************* */
 h1{
      font-size: 120%;
