--- a/ReactFooter/Index.css
+++ b/ReactFooter/Index.css
@@ -1,4 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
+
+
+
+:root{
+  --footerHeight: 120px;
+  --footerWrapperBottomMargin: -120px;
+  --navFooterBG: red;
+}
+
+body{  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  user-select: none;
+  font-family: Dosis, Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 14px;
+}
+nav.nav-wrapper, #footer{
+  background-color: var(--navFooterBG);
+}
+
+
+
+
+/* ------------------------------------
+.               FOOTER
+------------------------------------ */
+#wrapper{
+  min-height: 100vh;
+  margin-bottom: var(--footerWrapperBottomMargin);
+}
+
+#wrapper::after, #footer{
+  content: "";
+  display: block;
+
+  height: var(--footerHeight);
+}
+
+#footer{
+  overflow: hidden;
+}
+
+
+
+/* ------------------------------------
+.              HAMBURGER
+------------------------------------ */
+.sidenav-trigger{
+  position: relative;
+  top: 10px;
+  cursor: pointer;
+}
+.sidenav-trigger > div {
+  width: 45px;    
+  height: 5px;
+  margin: 7px;
+  background-color: #fff;
+  border-radius: 30px;
+}
+
+/* ------------------------------------
+.              FOOTER
+------------------------------------ */
 #my-footer-copyright{
   font-size: 90%;
   font-family: Dosis;
