--- a/React/Index.css
+++ b/React/Index.css
@@ -19,7 +19,7 @@ body{
   padding: 0;
   box-sizing: border-box;
   user-select: none;
-  font-family: Dosis, Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 14px;
 }
 
